style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: darkblue;
}

main {
  max-width: 1200px;
  margin: 100px auto;
}

.title {
  display: flex;
  justify-content: space-between;
  h1 {
    color: white;
    font-size: 32px;
    margin-bottom: 5px;
  }

  img {
    width: 32px;
    height: 32px;
  }
}

.wrapper {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-auto-rows: minmax(120px, auto);
  color: darkblue;
  font-size: 20px;
  gap: 10px;

  grid-template-areas:
    "lorem culpa officia officia"
    "lorem mollit mollit fugiat"
    "exercitation magna laboris fugiat"
    "ullamco ullamco laboris consectetur"
    "pariatur dolore dolore excepteur";

  div {
    background-color: white;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .lorem {
    grid-area: lorem;
  }

  .culpa {
    grid-area: culpa;
  }

  .officia {
    grid-area: officia;
  }

  .mollit {
    grid-area: mollit;
  }

  .fugiat {
    grid-area: fugiat;
  }

  .exercitation {
    grid-area: exercitation;
  }

  .magna {
    grid-area: magna;
  }

  .laboris {
    grid-area: laboris;
  }

  .ullamco {
    grid-area: ullamco;
  }

  .consectetur {
    grid-area: consectetur;
  }

  .pariatur {
    grid-area: pariatur;
  }

  .dolore {
    grid-area: dolore;
  }

  .excepteur {
    grid-area: excepteur;
  }
}

/* რამდენიმე სექციისთვის მაგალითად : culpa exercitation magna pariatur  
consectetur excepteur მხოლოდ 1 ადგილს იკავებდნენ , ვფიქრობ grid-area ს 
მიწერის გარეშეც იგივე მივიღებდი მაგრამ მაინც დავუწერე <3
 */

